# yakker

./: .gitignore  pyproject.toml
tests/: test_tool.py
yakker/: __init__.py  client.py  conversation.py  message.py  parser.py  request.py  stream.py  tool.py
yakker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
