[build-system]
requires = ["setuptools>=61.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yakker"
version = "0.1.0"
description = "A Python client for the AG-UI protocol"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "requests>=0.12.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yakker*"]