[build-system]
requires = ["setuptools>=61.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yakker"
version = "0.1.0"
description = "Python library for managing agentic conversations as well as the AG-UI protocol"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yakker*"]